--- a/fragments/index.html
+++ b/fragments/index.html
@@ -58,7 +58,11 @@ annotationProcessor &#39;android.arch.persistence.room:compiler:1.1.1&#39;</code
     
       <google-codelab-step label="App Architecture" duration="0">
         <h2>Entities</h2>
-<pre><code>@Entity
+<pre><code>import android.arch.persistence.room.Entity;
+import android.arch.persistence.room.PrimaryKey;
+
+
+@Entity
 public class Poem {
    @PrimaryKey (autoGenerate = true)
    public int id;
@@ -70,7 +74,14 @@ public class Poem {
    public String date;
 }</code></pre>
 <h2>Dao</h2>
-<pre><code>@Dao
+<pre><code>import android.arch.lifecycle.LiveData;
+import android.arch.persistence.room.Dao;
+import android.arch.persistence.room.Insert;
+import android.arch.persistence.room.Query;
+import java.util.List;
+
+
+@Dao
 public abstract class PoemDAO {
 
    @Insert
@@ -98,7 +109,13 @@ public abstract class PoemDAO {
    abstract void deleteAllPoems();
 }</code></pre>
 <h2>Database</h2>
-<pre><code>@Database(entities = {Poem.class}, version = 1)
+<pre><code>import android.arch.persistence.room.Database;
+import android.arch.persistence.room.Room;
+import android.arch.persistence.room.RoomDatabase;
+import android.content.Context;
+
+
+@Database(entities = {Poem.class}, version = 1)
 public abstract class PoemRoomDatabase extends RoomDatabase {
 
    public abstract PoemDAO poemDAO();
@@ -120,7 +137,13 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
    }
 }</code></pre>
 <h2>Repository</h2>
-<pre><code>public class PoemRepository {
+<pre><code>import android.app.Application;
+import android.arch.lifecycle.LiveData;
+import android.os.AsyncTask;
+import java.util.List;
+
+
+public class PoemRepository {
 
    private PoemDAO mPoemDao;
 
@@ -204,7 +227,13 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
    }
 }</code></pre>
 <h2>ViewModel</h2>
-<pre><code>public class PoemViewModel extends AndroidViewModel {
+<pre><code>import android.app.Application;
+import android.arch.lifecycle.AndroidViewModel;
+import android.arch.lifecycle.LiveData;
+import java.util.List;
+
+
+public class PoemViewModel extends AndroidViewModel {
 
    private PoemRepository mRepository;
 
@@ -236,7 +265,21 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
       <google-codelab-step label="MainActivity" duration="0">
         <p>La &#34;Tabbed Activity&#34; que hemos creado a partir de la plantilla lleva mucho código predeterminado que no necesitamos, entre ellos un Fragment que muestra un Hello World, o un menu de opciones en la AppBar. Vamos a simplificarlo un poco y dejar únicamente lo que nos interesa.</p>
 <p>Borra toda la clase MainActivity, y deja solamente el siguiente código: </p>
-<pre><code>public class MainActivity extends AppCompatActivity {
+<pre><code>import android.arch.lifecycle.ViewModelProviders;
+import android.os.Bundle;
+import android.support.design.widget.TabLayout;
+import android.support.v4.app.Fragment;
+import android.support.v4.app.FragmentManager;
+import android.support.v4.app.FragmentPagerAdapter;
+import android.support.v4.view.ViewPager;
+import android.support.v7.app.AppCompatActivity;
+import android.view.View;
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+import java.util.Random;
+
+
+public class MainActivity extends AppCompatActivity {
 
    private SectionsPagerAdapter mSectionsPagerAdapter;
    private ViewPager mViewPager;
@@ -321,7 +364,21 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
 <p>Crea el <code>PoemListFragment</code> con el asistente (New -&gt; Fragment -&gt; Blank)</p>
 <p><img style="max-width: 641.00px" src="img\533ac65c2ce21ff4.png"></p>
 <p>Añadiremos en este <code>PoemListFragment</code> el <code>RecyclerView</code> para mostrar la lista de poemas. La lista de poemas con el que se rellenará el <code>RecyclerView</code> lo retornará el método abstracto <code>getPoems()</code>, que se concretará en los Fragments que extiendan de este PoemListFragment.</p>
-<pre><code>public abstract class PoemListFragment extends Fragment {
+<pre><code>import android.arch.lifecycle.LiveData;
+import android.arch.lifecycle.Observer;
+import android.arch.lifecycle.ViewModelProviders;
+import android.os.Bundle;
+import android.support.annotation.Nullable;
+import android.support.v4.app.Fragment;
+import android.support.v7.widget.LinearLayoutManager;
+import android.support.v7.widget.RecyclerView;
+import android.view.LayoutInflater;
+import android.view.View;
+import android.view.ViewGroup;
+import java.util.List;
+
+
+public abstract class PoemListFragment extends Fragment {
    PoemViewModel poemViewModel;
 
    @Override
@@ -362,8 +419,17 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
        android:layout_height=&#34;wrap_content&#34; /&gt;
 
 &lt;/FrameLayout&gt;</code></pre>
-<p>El código del <code>RecyclerView.Adapter</code>:</p>
-<pre><code>public class PoemsRecyclerAdapter extends RecyclerView.Adapter&lt;PoemsRecyclerAdapter.PoemViewHolder&gt;{
+<p>El código del <code>PoemsRecyclerAdapter</code>:</p>
+<pre><code>import android.support.v7.widget.RecyclerView;
+import android.view.LayoutInflater;
+import android.view.View;
+import android.view.ViewGroup;
+import android.widget.RatingBar;
+import android.widget.TextView;
+import java.util.List;
+
+
+public class PoemsRecyclerAdapter extends RecyclerView.Adapter&lt;PoemsRecyclerAdapter.PoemViewHolder&gt;{
 
    List&lt;Poem&gt; list;
 
@@ -442,20 +508,32 @@ public abstract class PoemRoomDatabase extends RoomDatabase {
       <google-codelab-step label="AZ, Newest y TopRated Fragments" duration="0">
         <p>Una vez creado el Fragment abstracto, ya podemos extenderlo para crear los Fragments AZ, Newest y TopRated:</p>
 <p>Crea una nueva <strong>Java Class</strong> para cada uno de ellos:</p>
-<pre><code>public class AZPoemListFragment extends PoemListFragment {
+<pre><code>import android.arch.lifecycle.LiveData;
+import java.util.List;
+
+
+public class AZPoemListFragment extends PoemListFragment {
 
    @Override
    LiveData&lt;List&lt;Poem&gt;&gt; getPoems() {
        return poemViewModel.getAllPoemsOrderedByTitle();
    }
 }</code></pre>
-<pre><code>public class NewestPoemListFragment extends PoemListFragment {
+<pre><code>import android.arch.lifecycle.LiveData;
+import java.util.List;
+
+
+public class NewestPoemListFragment extends PoemListFragment {
    @Override
    LiveData&lt;List&lt;Poem&gt;&gt; getPoems() {
        return poemViewModel.getAllPoemsOrderedByDate();
    }
 }</code></pre>
-<pre><code>public class TopRatedPoemListFragment extends PoemListFragment {
+<pre><code>import android.arch.lifecycle.LiveData;
+import java.util.List;
+
+
+public class TopRatedPoemListFragment extends PoemListFragment {
    @Override
    LiveData&lt;List&lt;Poem&gt;&gt; getPoems() {
        return poemViewModel.getAllPoemsOrderedByRating();
