--- a/fragments/index.html
+++ b/fragments/index.html
@@ -39,7 +39,8 @@
 <li><strong>NavController </strong>(Kotlin/Java object) - This is an object that keeps track of the current position within the navigation graph. It orchestrates swapping destination content in the NavHostFragment as you move through a navigation graph.</li>
 </ol>
 <p>When you navigate, you&#39;ll use the NavController object, telling it where you want to go or what path you want to take in your Navigation Graph. The NavController will then show the appropriate destination in the NavHostFragment.</p>
-<p>CODE: <a href="https://github.com/gerardfp/P9/" target="_blank">https://github.com/gerardfp/P9/</a></p>
+<p class="image-container"><img style="width: 258.00px" src="img/aad2d5607d124407.gif"></p>
+<h3 is-upgraded><a href="https://github.com/gerardfp/Onboarding" target="_blank">https://github.com/gerardfp/Onboarding</a></h3>
 <p class="image-container"><img style="width: 436.70px" src="img/af606f2eec6aaf3a.png"></p>
 <p class="image-container"><img style="width: 557.00px" src="img/ae63edba6ffdee29.png"></p>
 
@@ -95,6 +96,7 @@
     app:destination=&#34;@id/homeFragment&#34; /&gt;
 ...</code></pre>
 <p>Más adelante utilizaremos los identificadores de estas acciones para implementar la navegación.</p>
+<p>////////// Falta afegir lo del Start Destination</p>
 
 
       </google-codelab-step>
@@ -479,7 +481,9 @@
       </google-codelab-step>
     
       <google-codelab-step label="Práctica" duration="0">
-        <p>Login/Register flow</p>
+        <p>Onboarding con 3 destinos, y la opcion de saltar</p>
+<p class="image-container"><img style="width: 332.00px" src="img/1383f2eda52a44c8.gif"></p>
+<p class="image-container"><img style="width: 736.10px" src="img/e739b44958764ed.png"></p>
 
 
       </google-codelab-step>
