--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -1,4 +1,5 @@
 @import 'fonts.css';
+@import '../highlight.js/default.min.css';
 
 html {
     box-sizing: border-box;
@@ -7,10 +8,20 @@ html {
 body {
     font-family: 'Roboto';
     line-height: 1.5;
+    color: #555;
+    margin: 0;
+}
+
+section {
     margin: 0 auto;
     max-width: 50em;
-    padding: 4em 1em;
-    color: #555;
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+header {
+    margin: 0 auto;
+    max-width: 50em;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 a {
@@ -19,29 +30,29 @@ a {
 
 h1 {
     font-size: 3em;
-    margin-top: 1em;
-    padding-top: 1em;
+    margin-top: 1rem;
+    padding-top: 2rem;
     color: #333;
 }
 
 h2 {
     font-size: 2em;
-    margin-top: .8em;
-    padding-top: .8em;
+    margin-top: .8rem;
+    padding-top: 1.6rem;
     color: #444;
 }
 
 h3 {
     font-size: 1.6em;
-    margin-top: .6em;
-    padding-top: .6em;
+    margin-top: .6rem;
+    padding-top: 1.2rem;
     color: #444;
 }
 
 img {
     max-width: 100%;
     display: block;
-    margin: 3em auto;
+    margin: 1em auto 3em auto;
 }
 
 p img {
@@ -50,7 +61,7 @@ p img {
 }
 
 resum {
-
+    color: inherit;
 }
 
 code {
@@ -89,8 +100,8 @@ host {
     display: block;
     text-align: center;
     padding: .2em;
-    border-radius: 4px 4px 0px 0px;
-    font-size: 12px;
+    border-radius: 8px 8px 0px 0px;
+    font-size: 14px;
 }
 
 shell {
@@ -99,10 +110,10 @@ shell {
     font-weight: bold;
     display: block;
     padding: .5em;
-    border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 8px 8px;
     font-family: 'Ubuntu mono';
     white-space: pre;
-    font-size: 12px;
+    font-size: 14px;
     overflow-x: auto;
 }
 
@@ -149,15 +160,16 @@ info {
 
 url {
     border: 1px solid lightgray;
-    border-radius: 4px;
+    border-radius: 8px;
     padding: .1em .3em;
 }
 
 file, directory {
     font-family: 'Ubuntu mono';
     background-color: lightgoldenrodyellow;
-    padding: .1em;
+    padding: .1em .3em;
     white-space: nowrap;
+    border: 1px dashed gray;
 }
 
 kbd {
@@ -172,7 +184,7 @@ kbd {
     display: inline-block;
     font-size: .9em;
     font-weight: 700;
-    line-height: 1;
+
     padding: 3px 6px;
     white-space: nowrap;
 }
@@ -185,4 +197,74 @@ menu-item {
     background-color: #f2f2f2;
     padding: .1em 1.2em;
     border: 1px solid #bbb;
+}
+
+sidenav {
+    display: block;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: 0.3s;
+    padding-top: 60px;
+    border-bottom: 1px solid gray;
+    width: 0;
+}
+
+sidenav.open {
+    width: 250px;
+}
+
+hamb-close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    cursor: pointer;
+}
+hamb-close::before {
+    content: '\00d7';
+}
+
+sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    width: 250px;
+}
+
+sidenav a:hover {
+    color: #f1f1f1;
+}
+
+nav {
+    background-color: #333; /* Black background color */
+    position: fixed; /* Make it stick/fixed */
+    top: 0; /* Stay on top */
+    width: 100%; /* Full width */
+    transition: top 0.3s; /* Transition effect when sliding down (and up) */    
+}
+
+nav.hide {
+    top: -50px;
+}
+
+hamb-open {
+    font-size: 30px;
+    cursor: pointer;
+    color: #f1f1f1;
+    padding: 1rem;
+}
+
+hamb-open::before {
+    content: '\2630';
 }
