--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -63,6 +63,10 @@ img {
     border-color: white;
 }
 
+img[noshadow] {
+    box-shadow: none;
+}
+
 p img {
     display: inline;
     margin: 0 .2em;
@@ -83,6 +87,7 @@ codefile {
     border: 1px solid #d8dee9;
     border-radius: 8px 8px 0px 0px;
     font-family: 'Consolas';
+    font-size: .9em;
     padding: .2em 1em;
     color: #555;
 }
@@ -108,6 +113,13 @@ a[href*='github']::before {
 a::before {
     text-decoration: none;
     display: inline-block;
+}
+a[noicon]::before {
+    content: none;
+}
+
+a.token.url-link::before{
+    content: none;
 }
 
 code {
@@ -212,24 +224,34 @@ url {
 
 file, directory {
     font-family: 'Consolas';
+    font-size: .9em;
     background-color: #f5f7ab6a;
     color: #333;
     padding: .1em .5em;
     margin: .3em;
     white-space: nowrap;
-    /* border: 1px dashed #3d3d37; */
+    border-radius: 4px;
 }
 
+file {
+    background: #a9d1f9;
+}
+
+directory {
+    background: #fff59c;
+}
 file::before, directory::before {
     font-family: 'FASolid';
     margin-right: .5em;
 }
 
 file::before {
+    color: white;
     content: '\f15c';
 }
 
 directory::before {
+    color: #c5c5c1;
     content: '\f07c';
 }
 
@@ -333,12 +355,12 @@ check::before {
 
 
 
-work, warn, info, optional {
+work, warn, info, optional, tldr {
     position: relative;
     border-radius: 8px 0px 0px 8px;
 }
 
-work::before, warn::before, info::before, optional::before {
+work::before, warn::before, info::before, optional::before, tldr::before {
     position: absolute;
     top: .8em;
     left: -.8em;
@@ -405,7 +427,13 @@ optional::before {
     background-color: #FFA700;
 }
 
-
+tldr {
+    display: block;
+    background:  #d8dee9;
+    border-left: 2px solid #a8aea9;
+    padding: 1em;  
+    margin: 1em 0;
+}
 
 
 sidenav {
@@ -484,4 +512,10 @@ hamb-open::before {
 
 .token > .token > .inline-color {
     display: none;
+}
+
+embed {
+    margin: 2em 0;
+    border-radius: 8px;
+    border: 1px solid #d8dee9;
 }
