--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -14,6 +14,7 @@ body {
 
 * {
     border-color: white;
+    box-sizing: border-box;
 }
 
 section {
@@ -436,6 +437,101 @@ tldr {
 }
 
 
+
+
+question {
+    display: block;
+    border: 1px solid blue;
+    padding: 1em;
+    border-radius: 8px 8px 0 0;
+}
+
+question statement {
+    display: block;
+}
+
+question answer {
+    display: block;
+    margin: .4em 0;
+    padding: .2em;
+}
+
+question label {
+    padding: .5em 1em;
+    margin: .5em 0;
+}
+
+question input + label::before {
+    padding-right: 1em;
+}
+
+question input[type=radio] + label::before {
+    font-family: 'FARegular';
+    content: '\f111';
+}
+
+question input[type=radio]:checked + label::before {
+    font-family: 'FASolid';
+    content: '\f192';
+}
+
+question input[type=checkbox] + label::before {
+    font-family: 'FARegular';
+    content: '\f0c8';
+}
+
+question input[type=checkbox]:checked + label::before {
+    font-family: 'FASolid';
+    content: '\f14a';
+}
+
+question answer.was-correct {
+    /* border: 1px solid green; */
+    border-radius: 8px; 
+}
+
+question answer::before {
+    display: inline-block;
+    padding-left: 1em;
+    width: 1em;
+    content: ' ';
+    font-family: 'FASolid';
+}
+
+question answer.right::before {
+    content: '\f00c';
+    color: green;
+}
+
+question answer.wrong::before {
+    content: '\f00d';
+    color: red;
+}
+
+question answer.was-correct {
+    background-color: #c6e7b1;
+}
+
+question input[type=radio],[type=checkbox] {
+    display: none;
+}
+
+question button {
+    background-color: #0e73ee;
+    color: white;
+    padding: .8em 2.4em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+
+
+
+
+
+
 sidenav {
     display: block;
     height: 100%;
@@ -519,3 +615,5 @@ embed {
     border-radius: 8px;
     border: 1px solid #d8dee9;
 }
+
+
