--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -10,6 +10,7 @@ body {
     line-height: 1.8;
     color: #555;
     margin: 0;
+    margin-bottom: 5em;
 }
 
 * {
@@ -18,15 +19,20 @@ body {
 }
 
 section {
-    margin: 0 auto;
+    margin: 2em auto;
     max-width: 50em;
     padding: 1rem 1rem 1rem 1rem;
+    box-shadow: 0px 1px 2px 0px rgba(60,64,67,0.3),0px 2px 6px 2px rgba(60,64,67,0.15);
+    border-radius: 4px;
 }
 
 header {
     margin: 0 auto;
     max-width: 50em;
     padding: 1rem 1rem 1rem 1rem;
+    box-shadow: 0px 1px 2px 0px rgba(60,64,67,0.3),0px 2px 6px 2px rgba(60,64,67,0.15);
+    border-radius: 4px;
+    background-color: #fafafa;
 }
 
 a {
@@ -43,8 +49,8 @@ h1 {
 
 h2 {
     font-size: 2em;
-    margin-top: .8rem;
-    padding-top: 1.6rem;
+    margin-top: .1rem;
+    padding-top: .1rem;
     color: #444;
 }
 
@@ -59,9 +65,9 @@ img {
     max-width: 100%;
     display: block;
     margin: 1.5em auto 3em auto;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    border: 8px solid;
-    border-color: white;
+    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
+    border: 1px solid;
+    border-color: #f2f2f2;
 }
 
 img[noshadow] {
@@ -71,7 +77,7 @@ img[noshadow] {
 p img {
     display: inline;
     margin: 0 .2em;
-    border: 0;
+    border: 1px solid #f2f2f2;
 }
 
 ul, ol {
@@ -216,6 +222,17 @@ inshell {
     font-size: 1rem;
 }
 
+w {
+    background-color: #f9f9f9;
+    color: #3f1888;
+    font-family: 'Consolas';
+    padding: .1em .3em;
+    white-space: pre;
+    border-radius: 4px;
+    font-size: 1rem;
+    border: 1px solid #efefef;
+}
+
 url {
     border: 1px solid lightgray;
     border-radius: 8px;
@@ -262,7 +279,7 @@ string {
     font-size: 1rem;
     background: #dde5da;
     color: #2f9c0a;
-    padding: .1em .5em;
+    padding: .1em .3em;
     white-space: nowrap;
     border-radius: 4px;
     /* border: 1px dotted #3e4240; */
@@ -376,7 +393,7 @@ work, warn, info, optional, tldr, observe {
     border-radius: 8px 0px 0px 8px;
     border: 1px solid #d8dee9;
     padding: 1em;
-    margin: 1em 0;
+    margin: 2em 0;
 }
 
 work::before, warn::before, info::before, optional::before, tldr::before, observe::before {
