--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -36,6 +36,20 @@ header {
     color: white;
 }
 
+abstract {
+    background: white;
+    color: black;
+    display: block;
+    padding: 1em 2em 2em 2em;
+    border-radius: 4px;
+    box-shadow: inset 0px 1px 2px 0px rgba(60,64,67,0.3), inset 0px 2px 6px 2px rgba(60,64,67,0.15);
+
+}
+
+
+
+
+
 a {
     color: #42b983; 
     /* color: #e81c4f; */
@@ -97,7 +111,7 @@ codefile {
     display: block;
     border: 1px solid #d8dee9;
     border-radius: 8px 8px 0px 0px;
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     font-size: .9em;
     padding: .2em 1em;
     color: #555;
@@ -213,12 +227,22 @@ shell {
 
 
 
-
+ln {
+    padding: 0 .5em;
+    background-color: #5f5047;
+    color: hsl(24, 20%, 95%);
+    border-radius: 999px;
+    text-shadow: none;
+    box-shadow: 0 2px  	#997a66;
+    font: bold 65%/1.5 sans-serif;
+    position: relative;
+    top: -.2em;
+}
 
 incode {
     background: #f5f7f9;
     /* background: #2d2d2d;   */
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     white-space: pre;
     padding: .1em .5em;
     border-radius: 4px;
@@ -227,7 +251,7 @@ incode {
 
 inshell {
     background-color: #dddddd;
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     padding: .1em .5em;
     white-space: pre;
     border-radius: 4px;
@@ -237,12 +261,16 @@ inshell {
 w {
     background-color: #f9f9f9;
     color: #3f1888;
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     padding: .1em .3em;
     white-space: pre;
     border-radius: 4px;
     font-size: 1rem;
     border: 1px solid #efefef;
+}
+
+m {
+    font-family: 'Consolas', monospace;
 }
 
 url {
@@ -253,7 +281,7 @@ url {
 }
 
 file, directory {
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     font-size: .9em;
     background-color: #f5f7ab6a;
     color: #333;
@@ -287,7 +315,7 @@ directory::before {
 }
 
 string {
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     font-size: 1rem;
     background: #dde5da;
     color: #2f9c0a;
@@ -307,7 +335,7 @@ name {
 }
 
 tech {
-    font-family: 'Consolas';
+    font-family: 'Consolas', monospace;
     background: #e8e9ea;
     color: #0645ad;
     padding: .1em .3em;
@@ -725,6 +753,21 @@ o div.code-toolbar pre {
 }
 
 
+question[text] input[type=text] {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+}
+
+question[text] input[type=text].right {
+    background: #c6e7b1;
+}
+
+question[text] input[type=text].wrong {
+    background: rgb(222, 151, 151);;
+}
 
 
 
