--- a/fragments/index.html
+++ b/fragments/index.html
@@ -797,9 +797,14 @@
 </section>
     
 <section>
-    <h2>Práctica</h2>
-    <img src="img/f22abb3936d9dac0.png"> P2-Onboarding
-    <p>Onboarding con 3 destinos, y la opcion de saltar. Animaciones</p>
-    <img src="img/1383f2eda52a44c8.gif"></p>
-    <img src="img/e739b44958764ed.png"></p>
+    <h2>Práctica: Onboarding</h2>
+    <p>Implementa un Onboarding de 3 pantallas. En las dos primeras 
+        debe haber una opción para omitir (<em>skip</em>). 
+        Utilitza diferentes animaciones en cada acción de navegación.</p>
+
+    <p>Ejemplo:</p>
+    <img src="img/onboarding.gif">
+    
+    <p>Grafo de navegación:</p>
+    <img src="img/e739b44958764ed.png">
 </section>
